--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
+    "axios": "^1.7.7",
     "expo": "~50.0.17",
     "expo-av": "~13.10.5",
     "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.6",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "~16.0.9",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-media-library": "^15.9.2",
     "expo-modal": "^1.0.9",
@@ -34,8 +36,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-image-picker": "~14.7.1"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
