--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "axios": "^1.7.7",
     "expo": "~50.0.20",
-    "expo-av": "~13.10.5",
+    "expo-av": "~13.10.6",
     "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.6",
     "expo-document-picker": "~11.10.1",
@@ -36,7 +36,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-video": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
